<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Review_Header"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/first_name_label" />

            <TextView
                android:id="@+id/summary_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/last_name_label" />

            <TextView
                android:id="@+id/summary_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/address_label" />

            <TextView
                android:id="@+id/summary_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/city_state_label" />

            <TextView
                android:id="@+id/summary_city_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/zip_code_label" />

            <TextView
                android:id="@+id/summary_zip_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/phone_number_label" />

            <TextView
                android:id="@+id/summary_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/fax_number_label" />

            <TextView
                android:id="@+id/summary_fax_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/current_employer_label" />

            <TextView
                android:id="@+id/summary_current_employer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/current_position_label" />

            <TextView
                android:id="@+id/summary_current_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/current_salaray_label" />

            <TextView
                android:id="@+id/summary_current_salary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/current_responsibility_label" />

            <TextView
                android:id="@+id/summary_current_responsibility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/years_experience_label" />

            <TextView
                android:id="@+id/summary_years_experience"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/desired_position_label" />

            <TextView
                android:id="@+id/summary_desired_position"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/recruiter_name_label" />

            <TextView
                android:id="@+id/summary_recruiter_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/recruiter_email_label" />

            <TextView
                android:id="@+id/summary_recruiter_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/job_source_label" />

            <TextView
                android:id="@+id/summary_job_source"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/start_date_label" />

            <TextView
                android:id="@+id/summary_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7" />

        </LinearLayout>





    </LinearLayout>

</ScrollView>

