<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CoverLetterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@drawable/roundedbutton"
            android:id="@+id/contact_information_button"
            android:text="@string/contact_info_text"
            />

        <Button
            android:layout_width="match_parent"
            android:background = "@drawable/roundedbutton"
            android:layout_marginTop="6dp"
            android:layout_height="wrap_content"
            android:id="@+id/employment_history_button"
            android:text="@string/employment_history_text"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@drawable/roundedbutton"
            android:layout_marginTop="6dp"
            android:id="@+id/prospective_employment_button"
            android:text="@string/prospective_employment_text"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background = "@drawable/roundedbutton"
            android:layout_marginTop="6dp"
            android:id="@+id/recruiter_button"
            android:text="@string/recruiter_text"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background = "@drawable/roundedbutton"
            android:layout_marginTop="50dp"
            android:id="@+id/review_button"
            android:text="@string/review_text"
            android:layout_gravity="bottom|center"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:backgroundTint="@color/material_blue_grey_800"
            android:background = "@drawable/roundedbutton"
            android:layout_marginTop="15dp"
            android:id="@+id/review_button"
            android:text="Generate Cover Letter"
            android:layout_gravity="bottom|center"
            />



    </LinearLayout>

  </ScrollView>
